adminer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  containers:
  - name: adminer
    image: adminer
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  8080
      name:  http
  restartPolicy: Always
