deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  mydeploy
  labels:
    app:  mydeploy
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 6
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  myapp
    spec:
      containers:
      - name:  nginx
        image:  nginx
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - containerPort:  80
          name:  nginx
