elasticsearch.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  containers:
    - name: elasticsearch
      image: docker.elastic.co/elasticsearch/elasticsearch:7.9.1
      ports:
        - containerPort: 9200
      volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: elasticsearch-volume
  volumes:
    - name: elasticsearch-volume
      hostPath:
        path: /microservice-data/elasticsearch
  restartPolicy: Always
