mysql.yaml
apiVersion: v1.28.2
kind: Pod
metadata:
  name: mysql
  namespace: default
  labels:
    app: mysql
spec:
  containers:
    - name: mysql
      image: mysql
      ports:
        - containerPort: 3307
          name: http
