product-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: product-api
  labels:
    app: product-api
spec:
  containers:
    - name: product-api
      image: chauvanloc/product-api
      ports:
        - containerPort: 3002
          name: http
  restartPolicy: Always
