rabbitmq.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  containers:
  - name: rabbitmq
    image: rabbitmq
    ports:
    - containerPort: 5672
      name: http
    volumeMounts:
    - mountPath: /var/lib/rabbitmq
      name: rabbitmq-volume
  volumes:
  - name: rabbitmq-volume
    hostPath:
      path: /microservice-data
