redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis
      ports:
        - containerPort:  6379
          name:  http
      volumeMounts:
        - name: redis-volumn
          mountPath: /data
  volumes:
    - name: redis-volumn
      hostPath:
        path: /microservice-data/redis
