ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  namespace: default
  labels:
    app: hello-world
spec:
  containers:
  - name: hello-world
    image: hello-world
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort:  80
      name:  http
