user_api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: user-api
  labels:
    app: user-api
spec:
  containers:
    - name: user-api
      image: chauvanloc/user-api
      ports:
        - containerPort:  3001
          name:  http
  restartPolicy: Always
