adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer-service
spec:
  selector:
    app: adminer
  type: ClusterIP
  ports:
  - name: adminer
    protocol: TCP
    port: 8080
    targetPort: 8080
