clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  selector:
    app: mynginx
  type: ClusterIP
  ports:
  - name: nginx-service
    protocol: TCP
    port: 80
    targetPort: 80
