loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: myloadbalancer
spec:
  selector:
    app: myapp
  type: LoadBalancer
  ports:
  - name: nginx
    protocol: TCP
    port: 81
    targetPort: 80
    nodePort: 30000
