nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynodeport
spec:
  selector:
    app: mynginx
  type: NodePort
  ports:
  - name: nginx1
    protocol: TCP
    port: 31
    targetPort: 80
    nodePort: 31000
  - name: nginx2
    protocol: TCP
    port: 32
    targetPort: 80
    nodePort: 32000
