rabbitmq_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
  - name: rabbitmq
    protocol: TCP
    port: 5672
    targetPort: 5672
  - name: rabbitmq2
    protocol: TCP
    port: 15672
    targetPort: 15672
