redis_cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - name: redis
    protocol: TCP
    port: 6379
    targetPort: 6379
