service-product.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product-api
  type: ClusterIP
  ports:
    - name: product-service
      protocol: TCP
      port: 3002
      targetPort: 3002
