user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user-api
  type: ClusterIP
  ports:
    - name: user-service
      protocol: TCP
      port: 3001
      targetPort: 3001
